--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
     "axios": "^0.21.1",
     "bootstrap": "^5.1.3",
     "chart.js": "^3.5.1",
+    "firebase": "^9.8.0",
     "html-react-parser": "^1.4.12",
     "react": "^17.0.2",
     "react-alice-carousel": "^2.5.1",
     "react-bootstrap": "^2.3.1",
     "react-chartjs-2": "^3.0.4",
     "react-dom": "^17.0.2",
+    "react-google-button": "^0.7.2",
+    "react-icons": "^4.3.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
